Question 6 et 7
